gccida/g2/try_copy_prop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10423:4: error: expected ';' after expression
rtx v10; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10423:5: error: use of undeclared identifier 'v10'
rtx v10; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10430:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10430:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10431:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10431:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10434:4: error: expected ';' after expression
rtx reg_rtx; // [rsp+10h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10434:5: error: use of undeclared identifier 'reg_rtx'
rtx reg_rtx; // [rsp+10h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10436:4: error: expected ';' after expression
rtx x; // [rsp+28h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10436:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+28h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10438:4: error: expected ';' after expression
rtx v26; // [rsp+40h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10438:5: error: use of undeclared identifier 'v26'
rtx v26; // [rsp+40h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10441:1: error: use of undeclared identifier 'reg_rtx'
reg_rtx = cfun->emit->x_regno_reg_rtx[regno]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10474:1: error: use of undeclared identifier 'v10'
v10 = ( rtx)rtx[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10475:17: error: use of undeclared identifier 'v10'
if ( *( _WORD *)v10 == 47 || ( v10 = single_set_2( rtx, v10)) != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10475:57: error: use of undeclared identifier 'v10'
if ( *( _WORD *)v10 == 47 || ( v10 = single_set_2( rtx, v10)) != 0LL ) 
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10475:32: error: use of undeclared identifier 'v10'
if ( *( _WORD *)v10 == 47 || ( v10 = single_set_2( rtx, v10)) != 0LL ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10477:24: error: use of undeclared identifier 'v10'
v14.rtwint = ( __int64)v10->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/loop.c:10492:1: error: use of undeclared identifier 'x'
x = rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_copy_prop/src/obj/loop.o] Error 1
